# wamr_repro

./: .gitignore  CMakeLists.txt  README.rst  build.sh  prj.conf
app/: package-lock.json  package.json
app/assembly/: index.ts  timer.ts
src/: binding.h  compiled_wasm_app.h  main.c
wamr/core/: config.h
wamr/core/app-mgr/app-manager/: module_wasm_app.c
wamr/core/shared/utils/: bh_queue.c
wasm_build/: app.aot
